# alpha-link

./: .clang-format  .codecov.yml  .gitignore  CMakeLists.txt  README.md
.dev-scripts/: configure  test
.github/workflows/: tests.yml
include/alink/: base_model.hpp  diff_state.hpp  follower.hpp  leader.hpp  messages.hpp  meta.hpp  model_base.hpp  traits.hpp
include/alink/detail/: base.hpp  diff_state.hpp
src/: common.cpp  messages_test.cpp
tests/: CMakeLists.txt  alink_traits_int.hpp  base_model.cpp  diff_state.cpp  gtest.cpp  leader.cpp  messages.cpp  test_common.cpp  test_common.hpp  test_traits.hpp
